colang-cli/tests/samples/features/io/compile_error/readln_int.co
fun main() {
  var x: int;
  readln x;
}
